@@ -1,7 +1,7 @@
-MD5 68e5b55e68da1a55a44b62c71743dc06 tpb-0.6.3.ebuild 964
-MD5 81f99a67c26e85cf5b8cbcb750f37e86 tpb-0.6.4.ebuild 976
-MD5 3aa15b341498c29f3e39c4c457fe6cb5 ChangeLog 2357
-MD5 19fd766bac8e110b4620363a1ace26dd metadata.xml 159
-MD5 5cba07339a0908c048f81d7b21dc9d36 files/tpb-configure-fix.diff 478
+MD5 a378471208797fc63a967bbfb6d28206 ChangeLog 2501
 MD5 518b5249d50bbd2dbfae47d617bc3a3f files/digest-tpb-0.6.3 61
 MD5 c02a2b1c4add1bee3f398b906a2cdd4e files/digest-tpb-0.6.4 61
+MD5 5cba07339a0908c048f81d7b21dc9d36 files/tpb-configure-fix.diff 478
+MD5 19fd766bac8e110b4620363a1ace26dd metadata.xml 159
+MD5 68e5b55e68da1a55a44b62c71743dc06 tpb-0.6.3.ebuild 964
+MD5 8363ae1cde4a4577f28f0ba131f66349 tpb-0.6.4.ebuild 1019
