@@ -1,6 +1,9 @@
 # ChangeLog for app-laptop/tpb
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/tpb/ChangeLog,v 1.13 2005/11/25 13:09:16 brix Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/tpb/ChangeLog,v 1.14 2006/01/16 19:43:45 brix Exp $
+
+  16 Jan 2006; Henrik Brix Andersen <brix@gentoo.org> tpb-0.6.4.ebuild:
+  Added modular-x dependencies, thanks to Adrian Frith in bug #119220.
 
   25 Nov 2005; Henrik Brix Andersen <brix@gentoo.org> tpb-0.6.4.ebuild:
   Stable on x86.
